feat(lotto): 수익률 계산 출력 구현